# ESP-IDF-TEST

./: .gitignore  README.md
audio_test/: sdkconfig.defaults
audio_test/main/: CMakeLists.txt  blink_example_main.c
blink/: sdkconfig.defaults.esp32s3
blink/main/: blink_example_main.c
blink_i2c/: sdkconfig.old
blink_i2c/main/: blink_example_main.c  idf_component.yml
esp-adf-check/: CMakeLists.txt
esp32-record/: CMakeLists.txt
esp32-record/main/: CMakeLists.txt  es8311_example.c
esp32_audio/: sdkconfig.defaults.esp32s3
esp32_audio/main/: es8311_example.c
esp32_http_mp3/: CMakeLists.txt  partitions.csv   sdkconfig  sdkconfig.defaults
esp32_http_mp3/main/: CMakeLists.txt  es8311_example.c  idf_component.yml
esp32_http_pcm/: CMakeLists.txt  sdkconfig.defaults
esp32_http_pcm/main/: esp32_audio_wifi.c
esp32_http_pcm_record/: sdkconfig
esp32_http_pcm_record/main/: esp32_audio_wifi.c
esp32_http_pcm_v2/main/: CMakeLists.txt  esp32_audio_wifi.c
esp32_http_pcm_v3/: partitions.csv  sdkconfig  sdkconfig.defaults
esp32_http_pcm_v3/main/: CMakeLists.txt  esp32_audio_wifi.c
esp32_http_pcm_v4/: partitions.csv  sdkconfig  sdkconfig.defaults
esp32_http_pcm_v4/main/: CMakeLists.txt  esp32_audio_wifi.c
esp32_http_pcm_v5/: partitions.csv  sdkconfig  sdkconfig.defaults
esp32_http_pcm_v5/main/: CMakeLists.txt  esp32_audio_wifi.c
esp32_http_pcm_v6/: sdkconfig
esp32_http_pcm_v6/main/: CMakeLists.txt  audio_hal.c  audio_hal.h  audio_player.c  audio_player.h  http_client.c  http_client.h  main.c  (+2 more)
pipeline_tcp_client/: sdkconfig
volc_rtc/: sdkconfig
